fix: EntityNotFoundException: No row with the given identifier exists for entity [com.dg.cy.model.User with id '1111']] with root cause